--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start:server": "ts-node server/src/app.ts",
-    "start:client": "cd client && npm start"
+    "start:client": "cd client && npm start",
+    "start:both": "ts-node server/src/app.ts & cd client && npm start"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +14,13 @@
   "workspaces": [
     "./client",
     "./server"
-  ]
+  ],
+  "devDependencies": {
+    "@types/node": "^20.8.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "jwt-decode": "^3.1.2"
+  }
 }
