--- a/client/package.json
+++ b/client/package.json
@@ -11,18 +11,21 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@headlessui/react": "^0.0.0-insiders.1469b85",
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.6",
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@types/node": "^16.18.54",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
+    "@types/react-transition-group": "^4.4.7",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5"
   },
