--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "jwt-decode": "^3.1.2"
+    "@heroicons/react": "^2.0.18",
+    "install": "^0.13.0",
+    "jwt-decode": "^3.1.2",
+    "npm": "^10.2.0"
   }
 }
