--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.3.1"
+    "prisma": "^5.3.1",
+    "jwt-decode": "^3.1.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.4",
